<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">#showtime</string>
    <string name="app_id">1555447941362102</string>
    <string name="parse_appID">9Udpp12NvdbvZ8OaiAgJ2DhEmWdiZuRHBFdnyy2K</string>
    <string name="parse_clientID">wsBUV0tgGbMm8H9afQCyzjcIXbXCnPkz3e6Uj6hN</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tagline">You are a hero</string>
    <string name="leave_message"></string>
    <string name="leave_title">Do you want to leave the show ?</string>
    <string name="ok">YES</string>
    <string name="cancel">NO</string>
    <string name="promote_title">Ask friends to vote</string>
    <string name="title_activity_entry">Entry Activity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="emailFetch">Enter</string>
    <string name="callForGroup">Your School Email</string>
    <string name="ic_android">Icons</string>

    <string name="logging_in">Logging In</string>
    <string name="login_btn">Start</string>
    <string name="logging_out">Logging Out</string>

    <string name="icon_menu">c</string>
    <string name="icon_logout">s</string>
    <string name="icon_setting">q</string>
    <string name="icon_share">j</string>
    <string name="icon_support">g</string>
    <string name="icon_write">a</string>
    <string name="icon_back">i</string>
    <string name="icon_notify">n</string>
    <string name="icon_yes">h</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="support">Support</string>
    <string name="setting">Setting</string>
    <string name="share">Tell friends</string>
    <string name="logout">Logout</string>

    <string name="share_message">Grow you business!! http://goo.gl/REZWQz</string>
    <string name="share_title">Tell your friends</string>
    <string name="title_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
