<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:tint="@color/accent"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/appname"
        android:layout_marginBottom="10dp" />

    <TextView android:text="@string/app_name"
        android:textSize="36sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="@color/accent"
        android:id="@+id/appname" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:id="@+id/login"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:enabled="true"
        android:background="@drawable/roundbtn"
        android:nestedScrollingEnabled="false"
        android:onClick="loginClick" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:progressDrawable="@drawable/progressdrawable"
        android:layout_centerInParent="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logging_in"
        android:layout_centerInParent="true"
        android:layout_below="@+id/progressBar"
        android:id="@+id/loginText"
        android:textSize="18sp" />

</RelativeLayout>
